[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Tilesett.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/MovingPlatform.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Movable.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/wp.jpeg" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2688, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 64 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="moving_platform" parent="." instance=ExtResource( 4 )]
position = Vector2( -66.5511, 196.238 )

[node name="moving_platform2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1600, 448 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 192, 448 )
speed = 250
impulse = -525

[node name="GUI" type="Node2D" parent="Player"]
position = Vector2( -511, -299 )

[node name="Replay" type="Button" parent="Player/GUI"]
visible = false
margin_left = 471.0
margin_top = 195.0
margin_right = 554.0
margin_bottom = 215.0
text = "Réessayer?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vies" type="Label" parent="Player/GUI"]
margin_left = 970.0
margin_top = 6.0
margin_right = 1013.0
margin_bottom = 20.0
text = "Vies: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="Player/GUI"]
visible = false
margin_left = 463.0
margin_top = 147.0
margin_right = 563.0
margin_bottom = 161.0
text = "Partie terminée"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plateforme" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -327666, 3, 0, -327665, 3, 1, -327664, 3, 2, -196600, 3, 0, -196599, 3, 1, -196598, 3, 2, -196571, 3, 0, -196570, 3, 1, -196569, 3, 2, -196564, 2, 0, -131053, 2, 0, -131040, 2, 0, -65533, 2, 0, -65512, 3, 0, -65511, 3, 1, -65510, 3, 1, -65509, 3, 2, 65549, 3, 0, 65550, 3, 1, 65551, 3, 1, 65552, 3, 2, 65584, 5, 0, 65585, 5, 1, 65586, 5, 1, 65587, 5, 2, 196654, 2, 0, 262151, 3, 0, 262152, 3, 1, 262153, 3, 1, 262154, 3, 2, 393257, 2, 0, 524287, 0, 0, 458752, 0, 1, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 1, 458758, 0, 1, 458759, 0, 1, 458760, 0, 1, 458761, 0, 1, 458762, 0, 1, 458763, 0, 2, 458767, 0, 0, 458768, 0, 1, 458769, 0, 1, 458770, 0, 1, 458771, 0, 1, 458772, 0, 1, 458773, 0, 2, 458781, 2, 0, 589823, 4, 0, 524288, 4, 65536, 524289, 4, 0, 524290, 4, 131072, 524291, 4, 0, 524292, 4, 65536, 524293, 4, 0, 524294, 4, 131072, 524295, 4, 0, 524296, 4, 65536, 524297, 4, 0, 524298, 4, 131072, 524299, 4, 0, 524303, 4, 0, 524304, 4, 131072, 524305, 4, 0, 524306, 4, 65536, 524307, 4, 0, 524308, 4, 131072, 524309, 4, 0, 524327, 2, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 4, 0, 720895, 4, 0, 655360, 4, 131072, 655361, 4, 0, 655362, 4, 65536, 655363, 4, 0, 655364, 4, 131072, 655365, 4, 0, 655366, 4, 65536, 655367, 4, 0, 655368, 4, 131072, 655369, 4, 0, 655370, 4, 65536, 655371, 4, 0, 655375, 4, 0, 655376, 4, 65536, 655377, 4, 0, 655378, 4, 131072, 655379, 4, 0, 655380, 4, 65536, 655381, 4, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720920, 2, 0, 720924, 2, 0, 720928, 2, 0, 720933, 2, 0, 851943, 6, 0, 851944, 6, 0, 851945, 6, 0, 851946, 6, 0, 851947, 6, 0, 851948, 6, 0, 851949, 6, 0, 851950, 6, 0, 851951, 6, 0, 851952, 6, 0, 851953, 6, 0, 851954, 6, 0, 851955, 6, 0, 851956, 6, 0, 851957, 6, 0, 851958, 6, 0, 851959, 6, 0, 851960, 6, 0, 851961, 6, 0, 851962, 6, 0, 851963, 6, 0, 851964, 6, 0, 851965, 6, 0, 851966, 6, 0, 851967, 4, 0, 786432, 4, 65536, 786433, 4, 0, 786434, 4, 131072, 786435, 4, 0, 786436, 4, 65536, 786437, 4, 0, 786438, 4, 131072, 786439, 4, 0, 786440, 4, 65536, 786441, 4, 0, 786442, 4, 131072, 786443, 4, 0, 786444, 6, 0, 786445, 6, 0, 786446, 6, 0, 786447, 4, 0, 786448, 4, 131072, 786449, 4, 0, 786450, 4, 65536, 786451, 4, 0, 786452, 4, 131072, 786453, 4, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 6, 0, 786465, 6, 0, 786466, 6, 0, 786467, 6, 0, 786468, 6, 0, 786469, 6, 0, 786470, 6, 0, 786471, 6, 0, 786472, 6, 0, 786473, 6, 0, 786474, 6, 0, 786475, 6, 0, 786476, 6, 0, 786477, 6, 0, 786478, 6, 0, 786479, 6, 0, 786480, 6, 0, 786481, 6, 0, 786482, 6, 0, 786483, 6, 0, 786484, 6, 0, 786485, 6, 0, 786486, 6, 0, 786487, 6, 0, 786488, 6, 0, 786489, 6, 0, 786490, 6, 0, 786491, 6, 0, 786492, 6, 0, 786493, 6, 0, 786494, 6, 0, 786495, 6, 0, 786496, 6, 0, 786497, 6, 0, 786498, 6, 0, 786499, 6, 0, 786500, 6, 0, 786501, 6, 0, 786502, 6, 0, 786503, 6, 0, 786504, 6, 0, 786505, 6, 0, 786506, 6, 0, 786507, 6, 0, 786508, 6, 0, 786509, 6, 0, 786510, 6, 0, 786511, 6, 0, 786512, 6, 0, 786513, 6, 0, 786514, 6, 0, 786515, 6, 0, 786516, 6, 0, 786517, 6, 0, 786518, 6, 0, 786519, 6, 0, 786520, 6, 0, 786521, 6, 0, 917479, 7, 0, 917480, 7, 0, 917481, 7, 0, 917482, 7, 0, 917483, 7, 0, 917484, 7, 0, 917485, 7, 0, 917486, 7, 0, 917487, 7, 0, 917488, 7, 0, 917489, 7, 0, 917490, 7, 0, 917491, 7, 0, 917492, 7, 0, 917493, 7, 0, 917494, 7, 0, 917495, 7, 0, 917496, 7, 0, 917497, 7, 0, 917498, 7, 0, 917499, 7, 0, 917500, 7, 0, 917501, 7, 0, 917502, 7, 0, 917503, 4, 0, 851968, 4, 0, 851969, 4, 0, 851970, 4, 0, 851971, 4, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 7, 0, 851981, 7, 0, 851982, 7, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 7, 0, 851991, 7, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 851996, 7, 0, 851997, 7, 0, 851998, 7, 0, 851999, 7, 0, 852000, 7, 0, 852001, 7, 0, 852002, 7, 0, 852003, 7, 0, 852004, 7, 0, 852005, 7, 0, 852006, 7, 0, 852007, 7, 0, 852008, 7, 0, 852009, 7, 0, 852010, 7, 0, 852011, 7, 0, 852012, 7, 0, 852013, 7, 0, 852014, 7, 0, 852015, 7, 0, 852016, 7, 0, 852017, 7, 0, 852018, 7, 0, 852019, 7, 0, 852020, 7, 0, 852021, 7, 0, 852022, 7, 0, 852023, 7, 0, 852024, 7, 0, 852025, 7, 0, 852026, 7, 0, 852027, 7, 0, 852028, 7, 0, 852029, 7, 0, 852030, 7, 0, 852031, 7, 0, 852032, 7, 0, 852033, 7, 0, 852034, 7, 0, 852035, 7, 0, 852036, 7, 0, 852037, 7, 0, 852038, 7, 0, 852039, 7, 0, 852040, 7, 0, 852041, 7, 0, 852042, 7, 0, 852043, 7, 0, 852044, 7, 0, 852045, 7, 0, 852046, 7, 0, 852047, 7, 0, 852048, 7, 0, 852049, 7, 0, 852050, 7, 0, 852051, 7, 0, 852052, 7, 0, 852053, 7, 0, 852054, 7, 0, 852055, 7, 0, 852056, 7, 0, 852057, 7, 0, 983015, 7, 0, 983016, 7, 0, 983017, 7, 0, 983018, 7, 0, 983019, 7, 0, 983020, 7, 0, 983021, 7, 0, 983022, 7, 0, 983023, 7, 0, 983024, 7, 0, 983025, 7, 0, 983026, 7, 0, 983027, 7, 0, 983028, 7, 0, 983029, 7, 0, 983030, 7, 0, 983031, 7, 0, 983032, 7, 0, 983033, 7, 0, 983034, 7, 0, 983035, 7, 0, 983036, 7, 0, 983037, 7, 0, 983038, 7, 0, 983039, 4, 0, 917504, 4, 131072, 917505, 4, 0, 917506, 4, 65536, 917507, 4, 0, 917508, 4, 131072, 917509, 4, 0, 917510, 4, 65536, 917511, 4, 0, 917512, 4, 131072, 917513, 4, 0, 917514, 4, 65536, 917515, 4, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 4, 0, 917520, 4, 65536, 917521, 4, 0, 917522, 4, 131072, 917523, 4, 0, 917524, 4, 65536, 917525, 4, 0, 917526, 7, 0, 917527, 7, 0, 917528, 7, 0, 917529, 7, 0, 917530, 7, 0, 917531, 7, 0, 917532, 7, 0, 917533, 7, 0, 917534, 7, 0, 917535, 7, 0, 917536, 7, 0, 917537, 7, 0, 917538, 7, 0, 917539, 7, 0, 917540, 7, 0, 917541, 7, 0, 917542, 7, 0, 917543, 7, 0, 917544, 7, 0, 917545, 7, 0, 917546, 7, 0, 917547, 7, 0, 917548, 7, 0, 917549, 7, 0, 917550, 7, 0, 917551, 7, 0, 917552, 7, 0, 917553, 7, 0, 917554, 7, 0, 917555, 7, 0, 917556, 7, 0, 917557, 7, 0, 917558, 7, 0, 917559, 7, 0, 917560, 7, 0, 917561, 7, 0, 917562, 7, 0, 917563, 7, 0, 917564, 7, 0, 917565, 7, 0, 917566, 7, 0, 917567, 7, 0, 917568, 7, 0, 917569, 7, 0, 917570, 7, 0, 917571, 7, 0, 917572, 7, 0, 917573, 7, 0, 917574, 7, 0, 917575, 7, 0, 917576, 7, 0, 917577, 7, 0, 917578, 7, 0, 917579, 7, 0, 917580, 7, 0, 917581, 7, 0, 917582, 7, 0, 917583, 7, 0, 917584, 7, 0, 917585, 7, 0, 917586, 7, 0, 917587, 7, 0, 917588, 7, 0, 917589, 7, 0, 917590, 7, 0, 917591, 7, 0, 917592, 7, 0, 917593, 7, 0, 1048551, 7, 0, 1048552, 7, 0, 1048553, 7, 0, 1048554, 7, 0, 1048555, 7, 0, 1048556, 7, 0, 1048557, 7, 0, 1048558, 7, 0, 1048559, 7, 0, 1048560, 7, 0, 1048561, 7, 0, 1048562, 7, 0, 1048563, 7, 0, 1048564, 7, 0, 1048565, 7, 0, 1048566, 7, 0, 1048567, 7, 0, 1048568, 7, 0, 1048569, 7, 0, 1048570, 7, 0, 1048571, 7, 0, 1048572, 7, 0, 1048573, 7, 0, 1048574, 7, 0, 1048575, 4, 0, 983040, 4, 0, 983041, 4, 0, 983042, 4, 0, 983043, 4, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 4, 0, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 7, 0, 983053, 7, 0, 983054, 7, 0, 983055, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 983059, 4, 0, 983060, 4, 0, 983061, 4, 0, 983062, 7, 0, 983063, 7, 0, 983064, 7, 0, 983065, 7, 0, 983066, 7, 0, 983067, 7, 0, 983068, 7, 0, 983069, 7, 0, 983070, 7, 0, 983071, 7, 0, 983072, 7, 0, 983073, 7, 0, 983074, 7, 0, 983075, 7, 0, 983076, 7, 0, 983077, 7, 0, 983078, 7, 0, 983079, 7, 0, 983080, 7, 0, 983081, 7, 0, 983082, 7, 0, 983083, 7, 0, 983084, 7, 0, 983085, 7, 0, 983086, 7, 0, 983087, 7, 0, 983088, 7, 0, 983089, 7, 0, 983090, 7, 0, 983091, 7, 0, 983092, 7, 0, 983093, 7, 0, 983094, 7, 0, 983095, 7, 0, 983096, 7, 0, 983097, 7, 0, 983098, 7, 0, 983099, 7, 0, 983100, 7, 0, 983101, 7, 0, 983102, 7, 0, 983103, 7, 0, 983104, 7, 0, 983105, 7, 0, 983106, 7, 0, 983107, 7, 0, 983108, 7, 0, 983109, 7, 0, 983110, 7, 0, 983111, 7, 0, 983112, 7, 0, 983113, 7, 0, 983114, 7, 0, 983115, 7, 0, 983116, 7, 0, 983117, 7, 0, 983118, 7, 0, 983119, 7, 0, 983120, 7, 0, 983121, 7, 0, 983122, 7, 0, 983123, 7, 0, 983124, 7, 0, 983125, 7, 0, 983126, 7, 0, 983127, 7, 0, 983128, 7, 0, 983129, 7, 0, 1114087, 7, 0, 1114088, 7, 0, 1114089, 7, 0, 1114090, 7, 0, 1114091, 7, 0, 1114092, 7, 0, 1114093, 7, 0, 1114094, 7, 0, 1114095, 7, 0, 1114096, 7, 0, 1114097, 7, 0, 1114098, 7, 0, 1114099, 7, 0, 1114100, 7, 0, 1114101, 7, 0, 1114102, 7, 0, 1114103, 7, 0, 1114104, 7, 0, 1114105, 7, 0, 1114106, 7, 0, 1114107, 7, 0, 1114108, 7, 0, 1114109, 7, 0, 1114110, 7, 0, 1114111, 4, 0, 1048576, 4, 0, 1048577, 4, 0, 1048578, 4, 0, 1048579, 4, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 7, 0, 1048589, 7, 0, 1048590, 7, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 7, 0, 1048599, 7, 0, 1048600, 7, 0, 1048601, 7, 0, 1048602, 7, 0, 1048603, 7, 0, 1048604, 7, 0, 1048605, 7, 0, 1048606, 7, 0, 1048607, 7, 0, 1048608, 7, 0, 1048609, 7, 0, 1048610, 7, 0, 1048611, 7, 0, 1048612, 7, 0, 1048613, 7, 0, 1048614, 7, 0, 1048615, 7, 0, 1048616, 7, 0, 1048617, 7, 0, 1048618, 7, 0, 1048619, 7, 0, 1048620, 7, 0, 1048621, 7, 0, 1048622, 7, 0, 1048623, 7, 0, 1048624, 7, 0, 1048625, 7, 0, 1048626, 7, 0, 1048627, 7, 0, 1048628, 7, 0, 1048629, 7, 0, 1048630, 7, 0, 1048631, 7, 0, 1048632, 7, 0, 1048633, 7, 0, 1048634, 7, 0, 1048635, 7, 0, 1048636, 7, 0, 1048637, 7, 0, 1048638, 7, 0, 1048639, 7, 0, 1048640, 7, 0, 1048641, 7, 0, 1048642, 7, 0, 1048643, 7, 0, 1048644, 7, 0, 1048645, 7, 0, 1048646, 7, 0, 1048647, 7, 0, 1048648, 7, 0, 1048649, 7, 0, 1048650, 7, 0, 1048651, 7, 0, 1048652, 7, 0, 1048653, 7, 0, 1048654, 7, 0, 1048655, 7, 0, 1048656, 7, 0, 1048657, 7, 0, 1048658, 7, 0, 1048659, 7, 0, 1048660, 7, 0, 1048661, 7, 0, 1048662, 7, 0, 1048663, 7, 0, 1048664, 7, 0, 1048665, 7, 0 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 192, 448 )

[node name="Death" type="Area2D" parent="."]
position = Vector2( 1472, 704 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2( 0, 128 )
shape = SubResource( 1 )

[node name="Win" type="Area2D" parent="."]
position = Vector2( 3200, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win"]
shape = SubResource( 2 )

[node name="UpNDown" parent="." instance=ExtResource( 5 )]
position = Vector2( 2752, 448 )

[node name="LNR" parent="." instance=ExtResource( 5 )]
position = Vector2( 2048, 448 )

[node name="wp" type="Sprite" parent="."]
position = Vector2( 1495, -384 )
scale = Vector2( 1.208, 1.208 )
z_index = -999
texture = ExtResource( 6 )
[connection signal="pressed" from="Player/GUI/Replay" to="." method="_on_Replay_pressed"]
[connection signal="body_entered" from="Death" to="." method="_on_Death_body_entered"]
[connection signal="body_entered" from="Win" to="." method="_on_Win_body_entered"]
